@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta2:
+  ADD: DCOP call to return the score of the currently playing track.
   ADD: Audioscrobbler submit queue stored in disk. Tracks that are listened
        when offline will be available for submitting later.
   CHG: "Start Scan" button was removed, as well as "Monitor Changes"
